[project]
name = "specd"
version = "0.1.0"
description = "CLI for speculative decoding experiments with Gemma 3"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "rich==15.0.0",
    "torch==2.9.1",
    "transformers==5.8.0",
]

[project.scripts]
specd = "src.cli:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
